--- a/windows/pageant.rc
+++ b/windows/pageant.rc
@@ -52,7 +52,7 @@ CAPTION "Pageant Key List"
 FONT 8, "MS Shell Dlg"
 BEGIN
     LISTBOX IDC_KEYLIST_LISTBOX, 10, 10, 420, 155,
-        LBS_EXTENDEDSEL | LBS_HASSTRINGS | LBS_USETABSTOPS | WS_VSCROLL | WS_TABSTOP
+        LBS_EXTENDEDSEL | LBS_OWNERDRAWFIXED | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON "&Add Key", IDC_KEYLIST_ADDKEY, 10, 187, 60, 14
     PUSHBUTTON "Add Key (&encrypted)", IDC_KEYLIST_ADDKEY_ENC, 75, 187, 80, 14
     PUSHBUTTON "Re-e&ncrypt", IDC_KEYLIST_REENCRYPT, 315, 187, 60, 14
