Add 'next_message' methods to cipher and MAC vtables.
This provides a convenient hook to be called between SSH messages, for
the crypto components to do any per-message processing like
incrementing a sequence number.

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -42,7 +42,9 @@ add_sources_from_current_dir(utils
   memory.c
   memxor.c
   null_lp.c
+  nullcipher.c
   nullkey.c
+  nullmac.c
   nullseat.c
   nullstrcmp.c
   out_of_memory.c
