--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(utils STATIC
   ${GENERATED_COMMIT_C})
 add_dependencies(utils cmake_commit_c)
 add_subdirectory(utils)
+add_subdirectory(stubs)
 
 add_library(logging OBJECT
   logging.c)
@@ -33,7 +34,7 @@ add_library(crypto STATIC
 add_subdirectory(crypto)
 
 add_library(network STATIC
-  stubs/nullplug.c errsock.c logging.c x11disp.c
+  errsock.c logging.c x11disp.c
   proxy/proxy.c
   proxy/http.c
   proxy/socks4.c
@@ -55,7 +56,7 @@ add_library(guiterminal STATIC
   $<TARGET_OBJECTS:logging>)
 
 add_library(noterminal STATIC
-  stubs/noterm.c ldisc.c)
+  stubs/no-term.c ldisc.c)
 
 add_library(all-backends OBJECT
   pinger.c)
@@ -140,7 +141,7 @@ installed_program(psftp)
 add_executable(psocks
   ${platform}/psocks.c
   psocks.c
-  stubs/norand.c
+  stubs/no-rand.c
   proxy/nocproxy.c
   proxy/nosshproxy.c
   ssh/portfwd.c)
