--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -81,6 +81,7 @@ if(HALIBUT AND PERL_EXECUTABLE)
     ${CMAKE_CURRENT_SOURCE_DIR}/udp.but
     ${CMAKE_CURRENT_SOURCE_DIR}/pgpkeys.but
     ${CMAKE_CURRENT_SOURCE_DIR}/sshnames.but
+    ${CMAKE_CURRENT_SOURCE_DIR}/authplugin.but
     ${CMAKE_CURRENT_SOURCE_DIR}/index.but
     ${VERSION_BUT})
 
