New Seat method, seat_nonfatal().
This is like the seat-independent nonfatal(), but specifies a Seat,
which allows the GUI dialog box to have the right terminal window as
its parent (if there are multiple ones).

Changed over all the nonfatal() calls in the code base that could be
localised to a Seat, which means all the ones that come up if
something goes horribly wrong in host key storage. To make that
possible, I've added a 'seat' parameter to store_host_key(); it turns
out that all its call sites had one available already.

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -51,6 +51,7 @@ add_sources_from_current_dir(utils
   read_file_into.c
   seat_connection_fatal.c
   seat_dialog_text.c
+  seat_nonfatal.c
   sessprep.c
   sk_free_peer_info.c
   smemclr.c
