Add cmake check for whether setpgrp takes arguments.
FreeBSD declares setpgrp() as taking two arguments, like Linux's
setpgid(). Detect that at configure time and adjust the call in
Pageant appropriately.

--- a/cmake/cmake.h.in
+++ b/cmake/cmake.h.in
@@ -43,6 +43,8 @@
 #cmakedefine01 HAVE_CLOCK_MONOTONIC
 #cmakedefine01 HAVE_CLOCK_GETTIME
 #cmakedefine01 HAVE_SO_PEERCRED
+#cmakedefine01 HAVE_NULLARY_SETPGRP
+#cmakedefine01 HAVE_BINARY_SETPGRP
 #cmakedefine01 HAVE_PANGO_FONT_FAMILY_IS_MONOSPACE
 #cmakedefine01 HAVE_PANGO_FONT_MAP_LIST_FAMILIES
 
