--- a/windows/putty.rc
+++ b/windows/putty.rc
@@ -1,8 +1,8 @@
-#include "rcstuff.h"
+﻿#include "rcstuff.h"
 #include "putty-rc.h"
 
 #define APPNAME "PuTTY"
-#define APPDESC "SSH, Telnet, Rlogin, and SUPDUP client"
+#define APPDESC "SSH、Telnet、Rlogin 和 SUPDUP 客户端"
 
 IDI_MAINICON ICON "putty.ico"
 IDI_CFGICON ICON "puttycfg.ico"
