--- a/windows/puttytel.rc
+++ b/windows/puttytel.rc
@@ -1,8 +1,8 @@
-#include "rcstuff.h"
+﻿#include "rcstuff.h"
 #include "putty-rc.h"
 
 #define APPNAME "PuTTYtel"
-#define APPDESC "Telnet and Rlogin client"
+#define APPDESC "Telnet 和 Rlogin 客户端"
 
 IDI_MAINICON ICON "putty.ico"
 IDI_CFGICON ICON "puttycfg.ico"
