--- a/windows/pageant.rc
+++ b/windows/pageant.rc
@@ -35,9 +35,9 @@ BEGIN
     CTEXT "有 Pageant 客户端想要使用以下加密密钥：",
         IDC_PASSPHRASE_STATIC1, 10, 6, 230, 8
     CTEXT "", IDC_PASSPHRASE_FINGERPRINT, 10, 16, 230, 8
-    CTEXT "确定是您本人操作，请点击此框获取",
+    CTEXT "如果确定是本人操作，请点击此框获取输入焦点后，",
         IDC_PASSPHRASE_STATIC2, 10, 26, 230, 8
-    CTEXT "输入焦点后，输入密码以解密密钥。",
+    CTEXT "输入密码以解密密钥。",
         IDC_PASSPHRASE_STATIC3, 10, 34, 230, 8
     EDITTEXT IDC_PASSPHRASE_EDITBOX, 10, 44, 230, 12,
         ES_PASSWORD | ES_AUTOHSCROLL
