--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -65,6 +65,7 @@ add_sources_from_current_dir(utils
   stripctrl.c
   tempseat.c
   tree234.c
+  unicode-norm.c
   validate_manual_hostkey.c
   version.c
   wcwidth.c
