New utility function burnwcs().
Just like burnstr(), it memsets a NUL-terminated string to all zeroes
before freeing it. The only difference is that it does it to a string
of wchar_t.

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -9,6 +9,7 @@ add_sources_from_current_dir(utils
   bufchain.c
   buildinfo.c
   burnstr.c
+  burnwcs.c
   cert-expr.c
   chomp.c
   cmdline_get_passwd_input_state_new.c
