--- a/unix/CMakeLists.txt
+++ b/unix/CMakeLists.txt
@@ -236,3 +236,11 @@ add_executable(test_lineedit
   ${CMAKE_SOURCE_DIR}/stubs/no-timing.c)
 target_link_libraries(test_lineedit
   guiterminal settings eventloop charset utils ${platform_libraries})
+
+add_executable(test_terminal
+  ${CMAKE_SOURCE_DIR}/test/test_terminal.c
+  ${CMAKE_SOURCE_DIR}/stubs/no-gss.c
+  ${CMAKE_SOURCE_DIR}/stubs/no-storage.c
+  ${CMAKE_SOURCE_DIR}/stubs/no-timing.c)
+target_link_libraries(test_terminal
+  guiterminal settings eventloop charset utils ${platform_libraries})
