Start a windows/test subdirectory.
This will contain test code and test subprograms that don't belong in
the top-level test directory due to not being cross-platform.

Initial contents are test_screenshot.c, which was already its own
source file in the windows subdir, and test_split_into_argv.c, which
I've sawn off the bottom of windows/utils/split_into_argv.c and moved
into its own source file.

--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -181,12 +181,12 @@ else()
 endif()
 
 add_executable(test_split_into_argv
-  utils/split_into_argv.c)
+  test/test_split_into_argv.c)
 target_compile_definitions(test_split_into_argv PRIVATE TEST)
 target_link_libraries(test_split_into_argv utils ${platform_libraries})
 
 add_executable(test_screenshot
-  test_screenshot.c)
+  test/test_screenshot.c)
 target_link_libraries(test_screenshot utils ${platform_libraries})
 
 add_executable(test_lineedit
