Add a Unicode version of split_into_argv().
Created in the simplest way, by parametrising the existing code using
macros.

Nothing actually uses this yet. I hope to gradually switch
command-line parsing from 'ANSI' to Unicode strings, but this isn't
the only preparation needed, so it might yet be a while.

--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -34,6 +34,7 @@ add_sources_from_current_dir(utils
   utils/security.c
   utils/shinydialogbox.c
   utils/split_into_argv.c
+  utils/split_into_argv_w.c
   utils/version.c
   utils/win_strerror.c
   unicode.c)
