--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -21,6 +21,7 @@ add_sources_from_current_dir(utils
   debug.c
   decode_utf8.c
   decode_utf8_to_wchar.c
+  decode_utf8_to_wide_string.c
   default_description.c
   dupcat.c
   dupprintf.c
