Replace conf.c's type arrays with a new conf_key_info[].
This array is planned to be exposed more widely, and used for more
purposes than just checking the types of Conf options. In this commit
it just takes over from the two previous smaller arrays, and adds no
extra data.

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -14,6 +14,7 @@ add_sources_from_current_dir(utils
   chomp.c
   cmdline_get_passwd_input_state_new.c
   conf.c
+  conf_data.c
   conf_dest.c
   conf_launchable.c
   ctrlparse.c
