--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -209,3 +209,5 @@ add_executable(test_terminal
   no-jump-list.c)
 target_link_libraries(test_terminal
   guiterminal settings eventloop utils ${platform_libraries})
+
+add_sources_from_current_dir(test_conf no-jump-list.c handle-wait.c)
