--- a/unix/CMakeLists.txt
+++ b/unix/CMakeLists.txt
@@ -64,15 +64,16 @@ target_link_libraries(fuzzterm
 add_executable(osxlaunch
   osxlaunch.c)
 
-add_sources_from_current_dir(plink no-gtk.c)
-add_sources_from_current_dir(pscp no-gtk.c)
-add_sources_from_current_dir(psftp no-gtk.c)
+add_sources_from_current_dir(plink unicode.c no-gtk.c)
+add_sources_from_current_dir(pscp unicode.c no-gtk.c)
+add_sources_from_current_dir(psftp unicode.c no-gtk.c)
 add_sources_from_current_dir(psocks no-gtk.c)
 
 add_executable(psusan
   psusan.c
   ${CMAKE_SOURCE_DIR}/stubs/no-gss.c
   ${CMAKE_SOURCE_DIR}/ssh/scpserver.c
+  unicode.c
   no-gtk.c
   pty.c)
 be_list(psusan psusan)
@@ -120,6 +121,7 @@ add_executable(uppity
   ${CMAKE_SOURCE_DIR}/ssh/scpserver.c
   no-gtk.c
   pty.c
+  unicode.c
   ${CMAKE_SOURCE_DIR}/stubs/no-gss.c)
 be_list(uppity Uppity)
 target_link_libraries(uppity
@@ -148,7 +150,7 @@ if(GTK_FOUND)
     pty.c)
   be_list(pterm pterm)
   target_link_libraries(pterm
-    guiterminal eventloop settings charset utils ptermxpms
+    guiterminal eventloop settings utils ptermxpms
     ${GTK_LIBRARIES} ${X11_LIBRARIES})
   installed_program(pterm)
 
@@ -164,7 +166,7 @@ if(GTK_FOUND)
       pty.c)
     be_list(ptermapp pterm)
     target_link_libraries(ptermapp
-      guiterminal eventloop settings charset utils ptermxpms
+      guiterminal eventloop settings utils ptermxpms
       ${GTK_LIBRARIES} ${X11_LIBRARIES})
   endif()
 
@@ -175,7 +177,7 @@ if(GTK_FOUND)
   be_list(putty PuTTY SSH SERIAL OTHERBACKENDS)
   target_link_libraries(putty
     guiterminal eventloop sshclient otherbackends settings
-    network crypto charset utils puttyxpms
+    network crypto utils puttyxpms
     ${GTK_LIBRARIES} ${X11_LIBRARIES})
   set_target_properties(putty
     PROPERTIES LINK_INTERFACE_MULTIPLICITY 2)
@@ -190,7 +192,7 @@ if(GTK_FOUND)
     be_list(puttyapp PuTTY SSH SERIAL OTHERBACKENDS)
     target_link_libraries(puttyapp
       guiterminal eventloop sshclient otherbackends settings
-      network crypto charset utils puttyxpms
+      network crypto utils puttyxpms
       ${GTK_LIBRARIES} ${X11_LIBRARIES})
   endif()
 
@@ -205,7 +207,7 @@ if(GTK_FOUND)
     ${CMAKE_SOURCE_DIR}/proxy/nosshproxy.c)
   be_list(puttytel PuTTYtel SERIAL OTHERBACKENDS)
   target_link_libraries(puttytel
-    guiterminal eventloop otherbackends settings network charset utils
+    guiterminal eventloop otherbackends settings network utils
     puttyxpms
     ${GTK_LIBRARIES} ${X11_LIBRARIES})
 
@@ -217,7 +219,7 @@ if(GTK_FOUND)
     ${CMAKE_SOURCE_DIR}/stubs/no-storage.c
     ${CMAKE_SOURCE_DIR}/stubs/no-timing.c)
   target_link_libraries(test_lineedit
-    guiterminal settings eventloop charset utils ${platform_libraries})
+    guiterminal settings eventloop utils ${platform_libraries})
 
   add_executable(test_terminal
     ${CMAKE_SOURCE_DIR}/test/test_terminal.c
@@ -225,7 +227,7 @@ if(GTK_FOUND)
     ${CMAKE_SOURCE_DIR}/stubs/no-storage.c
     ${CMAKE_SOURCE_DIR}/stubs/no-timing.c)
   target_link_libraries(test_terminal
-    guiterminal settings eventloop charset utils ${platform_libraries})
+    guiterminal settings eventloop utils ${platform_libraries})
 endif()
 
 # Pageant is built whether we have GTK or not; in its absence we
@@ -251,4 +253,4 @@ target_link_libraries(pageant
   ${pageant_libs})
 installed_program(pageant)
 
-add_sources_from_current_dir(test_conf stubs/no-uxsel.c)
+add_sources_from_current_dir(test_conf unicode.c stubs/no-uxsel.c)
