--- a/windows/CMakeLists.txt
+++ b/windows/CMakeLists.txt
@@ -6,6 +6,7 @@ add_sources_from_current_dir(utils
   utils/arm_arch_queries.c
   utils/aux_match_opt.c
   utils/centre_window.c
+  utils/cmdline_arg.c
   utils/cryptoapi.c
   utils/defaults.c
   utils/dll_hijacking_protection.c
